# makegen

./: .pypirc  pyproject.toml
makegen/: __main__.py  main.py  rule.py  utils.py
tests/: rule_basic.Makefile  test_rule_basic.py
